<resources>
    <string name="app_name">BookListApp</string>

    <string name="preferences_key">BookListApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="login">Login</string>
    <string name="register_text">Don\'t have an a account yet? Register here!</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_books">There are no books in the list!</string>
    <string name="logout">Logout</string>
    <string name="hint_book_name">Book Name</string>
    <string name="hint_book_author">Book Author</string>
    <string name="add_book">Add Book</string>
    <string name="update_book">Update Book</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="insert_username">Please insert your username!</string>
    <string name="submit">Submit</string>
    <string name="go_to_google">Go To Google!</string>
</resources>