<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/dimen_5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/insert_username"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/dimen_5"/>

    <EditText
        android:id="@+id/etForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/hint_username"/>


    <Button
        android:id="@+id/btnSubmitForgottenPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/dimen_10"/>

</LinearLayout>