<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddBookFragment">

    <EditText
        android:id="@+id/etBookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimen_20"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:hint="@string/hint_book_name"/>

    <EditText
        android:id="@+id/etBookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etBookName"
        android:layout_marginTop="@dimen/dimen_5"
        style="@style/EditTextStyle"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:hint="@string/hint_book_author"/>


    <Button
        android:id="@+id/btnAddBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/dimen_20"/>


</androidx.constraintlayout.widget.ConstraintLayout>