<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/dimen_10"
        android:paddingEnd="@dimen/dimen_10">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:maxLength="20"
                android:nextFocusDown="@id/etPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

<!--                <EditText-->
<!--                    android:id="@+id/etUsername"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/hint_username"-->
<!--                    style="@style/EditTextStyle"-->
<!--                    android:imeOptions="actionNext"-->
<!--                    android:maxLines="1"-->
<!--                    android:drawableEnd="@drawable/ic_edit"/>-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>



<!--        <EditText-->
<!--            android:id="@+id/etPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/dimen_10"-->
<!--            android:hint="@string/hint_password"-->
<!--            style="@style/EditTextStyle"-->
<!--            android:imeOptions="actionDone"-->
<!--            android:maxLines="1"/>-->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_gravity="center"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dimen_5"/>


        <TextView
            android:id="@+id/tvWebView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/go_to_google"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dimen_5"/>
    </LinearLayout>


    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dimen_10"
        android:text="@string/register_text"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>